# birkin

./: .dockerignore  .env.example  .file-size-exceptions  .gitattributes  .gitignore  AGENTS.md  Birkin.command  CONTRIBUTING.md  DEV_ENV_VERIFICATION_REPORT.md  DEV_SETUP.md  Dockerfile  QUICKSTART.md  README-ko.md  README.md  RELEASE_v0.2.0.md  RELEASE_v0.3.0.md  RELEASE_v0.4.0.md  RELEASE_v0.5.0.md  RELEASE_v0.6.0.md  RELEASE_v0.7.0.md  RELEASE_v0.8.0.md  RELEASE_v0.9.0.md  ROADMAP.md  birkin  birkin_constants.py  birkin_launcher  birkin_logging.py  birkin_state.py  birkin_time.py  cli-config.yaml.example  cli.py  constraints-termux.txt  docker-compose.yml  flake.nix  launcher.py  mcp_serve.py  mini_swe_runner.py  model_tools.py  package-lock.json  package.json  (+9 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  setup_help.yml  skill_submission.yml
.github/workflows/: ci.yml
.plans/: fix-plan.json  openai-api-server.md  phase2-plan.json
acp_adapter/: __init__.py  auth.py  entry.py  permissions.py  server.py  session.py  tools.py
acp_registry/: agent.json
agent/: anthropic_adapter.py  auxiliary_client.py  context_engine.py  context_references.py  copilot_acp_client.py  credential_pool.py  display.py  insights.py  memory_manager.py  memory_provider.py  model_metadata.py  models_dev.py  prompt_builder.py  redact.py  skill_commands.py  skill_utils.py  smart_model_routing.py
birkin/: __init__.py
birkin/cli/: __init__.py  backup.py  main.py
birkin/core/: __init__.py  agent.py  compression.py  defaults.py  error_reporter.py  errors.py  models.py  session.py  session_fork.py  workflow_engine.py
birkin/eval/: __init__.py  cli.py  dataset.py  recommender_eval.py  runner.py  (+1 more)
birkin_cli/: __init__.py  auth.py  auth_commands.py  backup.py  banner.py  callbacks.py  claw.py  cli_output.py  clipboard.py  colors.py  commands.py  config.py  copilot_auth.py  cron.py  curses_ui.py  debug.py  default_soul.py  doctor.py  dump.py  env_loader.py  gateway.py  logs.py  main.py  mcp_config.py  memory_setup.py  model_normalize.py  model_switch.py  models.py  nous_subscription.py  pairing.py  platforms.py  plugins.py  plugins_cmd.py  profiles.py  providers.py  runtime_provider.py  setup.py  skills_config.py  skills_hub.py  skin_engine.py  (+6 more)
cron/: __init__.py  jobs.py  scheduler.py
datagen-config-examples/: run_browser_tasks.sh  web_research.yaml
docker/: SOUL.md  entrypoint.sh
docs/: SKILL-AUTHORING.md  acp-setup.md  honcho-integration-spec.html  honcho-integration-spec.md
environments/: README.md  __init__.py  agent_loop.py  agentic_opd_env.py  birkin_base_env.py  patches.py  tool_context.py  web_research_env.py
gateway/: __init__.py  channel_directory.py  config.py  delivery.py  hooks.py  mirror.py  pairing.py  restart.py  run.py  session.py  session_context.py  status.py  sticker_cache.py
landingpage/: index.html  script.js  style.css
launch/: blog-introducing-birkin.md  brand-voice-guide.md  product-hunt-draft.md  social-launch-content.md  social-media-launch.md
memory/: schema.md
nix/: checks.nix  configMergeScript.nix  devShell.nix  nixosModules.nix  packages.nix  python.nix
optional-skills/: DESCRIPTION.md
plans/: gemini-oauth-provider.md
plugins/: __init__.py
scripts/: Birkin.command  build_skills_index.py  check-file-sizes.sh  contributor_audit.py  discord-voice-doctor.py  install-hooks.sh  install.sh  kill_modal.sh  pre-commit  pre-push  release.py  sample_and_compress.py  start.bat  start.sh  verify_dev_env.sh
tests/: conftest.py  fakes.py  test_birkin_constants.py  test_birkin_logging.py  test_birkin_state.py  test_cli_skin_integration.py  test_docker.py  test_empty_model_fallback.py  test_ipv4_preference.py  test_mcp_serve.py  test_model_tools.py  test_project_metadata.py  test_subprocess_home_isolation.py  test_timezone.py  test_toolsets.py  test_utils_truthy_values.py
tools/: __init__.py  approval.py  browser_camofox.py  browser_camofox_state.py  browser_tool.py  budget_config.py  checkpoint_manager.py  code_execution_tool.py  credential_files.py  cronjob_tools.py  debug_helpers.py  delegate_tool.py  env_passthrough.py  file_operations.py  file_tools.py  managed_tool_gateway.py  mcp_oauth.py  mcp_tool.py  memory_tool.py  openrouter_client.py  osv_check.py  process_registry.py  registry.py  rl_training_tool.py  send_message_tool.py  session_search_tool.py  skill_manager_tool.py  skills_guard.py  skills_hub.py  skills_sync.py  skills_tool.py  terminal_tool.py  tirith_security.py  tool_backend_helpers.py  tool_result_storage.py  transcription_tools.py  tts_tool.py  vision_tools.py  voice_mode.py  web_tools.py  (+1 more)
web/: README.md  api.py  index.html  package-lock.json  vite.config.ts
website/: docusaurus.config.ts  sidebars.ts
(+986 files in other folders)
