[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "birkin-agent"
version = "0.7.0"
description = "Birkin — AI agent platform for orchestration, cybersecurity management, and lightweight web UI environments"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Birkin Team" }]
license = { text = "MIT" }
dependencies = [
  "openai>=2.21.0,<3",
  "anthropic>=0.39.0,<1",
  "python-dotenv>=1.2.1,<2",
  "httpx>=0.28.1,<1",
  "rich>=14.3.3,<15",
  "pydantic>=2.12.5,<3",
  "pyyaml>=6.0.2,<7",
  "fastapi>=0.115.0,<1",
  "uvicorn[standard]>=0.34.0,<1",
  "python-multipart>=0.0.6",
  "mcp>=1.27.0,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.2,<10",
  "pytest-asyncio>=1.3.0,<2",
  "pytest-xdist>=3.0,<4",
  "httpx>=0.28.1,<1",
]
korean = [
  "kiwipiepy>=0.17",
]
embeddings = [
  "sentence-transformers>=2.2,<4",
]
backup = [
  "cryptography>=43.0,<45",
]
all = [
  "birkin-agent[korean,embeddings,backup]",
]

[project.scripts]
birkin = "birkin.cli.main:main"

[tool.setuptools.packages.find]
include = ["birkin", "birkin.*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-n auto"